fix(swagger): issues with swagg annotations
