# internal/handler/pages_handler.go
@@ -164,7 +164,6 @@ type updatePagesTxRequest struct {
 // @Produce json
 // @Param id path int true "Page ID"
 // @Param updatePagesTxRequest body updatePagesTxRequest true "Update Pages Request"
-// @Param db.UpdateMetaTxParams meta body true "Updated meta parameters"
 // @Success 201 {object} db.Page
 // @Failure 400 {object} gin.H
 // @Failure 500 {object} gin.H
